submit enabled and redirect to pages

--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -35,7 +35,7 @@
           <label for="image_link">Image Link</label>
           {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
         </div>
-      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block" name ="venue" onclick="this.disabled=true;">
+      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block" name ="venue">
     </form>
   </div>
 {% endblock %}
