--- a/templates/forms/new_artist.html
+++ b/templates/forms/new_artist.html
@@ -36,7 +36,7 @@
         <label for="image_link">Image Link</label>
         {{ form.image_link(class_ = 'form-control', placeholder='Image', autofocus = true) }}
       </div>
-      <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block" onclick="this.disabled=true;">
+      <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 {% endblock %}
